# CipherCircle

./: .gitignore  INSTALL.md  README.md  package.json  pnpm-lock.yaml
app/: .env  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js
app/src/: App.tsx
app/src/api/: cipherCircleApi.ts  clientApi.ts
app/src/components/authClient/: authClient.ts
app/src/components/sidebar/: sidebarApp.tsx
app/src/components/ui/: BlurText.tsx  evervault-card.tsx  sidebar.tsx  text-animate.tsx  world-map.tsx
app/src/contexts/: ThemeContext.tsx
app/src/declarations/CipherCircleCanister_backend/: CipherCircleCanister_backend.did.js  index.d.ts  index.js
app/src/pages/chatGroup/: AddMemberModal.tsx  ChatPage.tsx
app/src/pages/clients/: Clients.tsx
app/src/pages/dashboard/: Dashboard.tsx  createGroupModal.tsx
app/src/pages/documents/: Document.tsx
app/src/pages/home/: index.tsx  worldMap.tsx
app/src/pages/settings/: Settings.tsx
app/src/types/: events.ts
app/src/utils/: actor.ts
cipher/: Cargo.toml  README.md  dfx.json  package.json
cipher/src/cipher_backend/: Cargo.toml
cipher/src/cipher_frontend/: package.json
cipher/src/cipher_frontend/src/: App.js
logic/: Cargo.toml
logic/res/: cipher_circle.wasm  increment.wasm
logic/src/: lib.rs
